Inmob-Salesforce/force-app/main/default/objects/User/fields/CI_Nombre_Funcion__c.field-meta.xml
<CustomField>
    <fullName>CI_Nombre_Funcion__c</fullName>
    <formula>IF(
CONTAINS(UserRole.Name, &apos;Rioja&apos;), &apos;LA RIOJA&apos;,
IF(
CONTAINS(UserRole.Name, &apos;Vittoria&apos;), &apos;LA GRAN VITTORIA&apos;, &apos;VILLA ITALIA&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Función</label>
    <type>Text</type>
</CustomField>