Inmob-Salesforce/force-app/main/default/objects/User/fields/Codigo_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Usuario__c</fullName>
    <label>Código Usuario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>