Inmob-Salesforce/force-app/main/default/objects/User/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <type>Email</type>
</CustomField>