Inmob-Salesforce/force-app/main/default/objects/User/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <inlineHelpText>Debe escribir el nombre de usuario del gerente.</inlineHelpText>
    <label>Gerente</label>
    <type>Email</type>
</CustomField>