Inmob-Salesforce/force-app/main/default/objects/User/fields/Prospectos_Reasignados__c.field-meta.xml
<CustomField>
    <fullName>Prospectos_Reasignados__c</fullName>
    <label>Prospectos Reasignados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>